remove unnecessary screenshot; clean up guide

--- a/docs/authentication/configuration/session-options.mdx
+++ b/docs/authentication/configuration/session-options.mdx
@@ -23,7 +23,7 @@ Fortunately, with Clerk you have to ability to fully control the lifetime of you
 
 Denotes the duration after which a session will expire and the user will have to sign in again, if they haven't been active on your site. By default, this setting is disabled for all newly created instances. To enable it and set your desired value, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/session-options/inactivity-timeout.jpg"
@@ -34,20 +34,20 @@ alt="The 'Sessions' configuration section in the Clerk Dashboard with a red outl
 
 Denotes the duration after which a session will expire and the user will have to sign in again, regardless of their activity on your site. By default, this setting is enabled with a default value of 7 days for all newly created instances. To find this setting and change the value, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/session-options/maximum-lifetime.jpg"
 alt="The 'Sessions' settings in the Clerk Dashboard with a red outline around the 'Maximum lifetime' section. This option is toggled on, revealing an input for customizing duration of a session lifetime."
 />
 
-## Multi-session handling
+## Multi-session applications
 
 Multi-session applications allow users to be signed into more than one account at a time from the same browser. Users may switch the active account by opening the [`<UserButton />`](/docs/components/user/user-button) and selecting the desired account.
 
 To enable this feature in your application, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**. Turn on the **Mutli-session handling** toggle.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/session-options/multisession-handling.jpg"
@@ -62,7 +62,7 @@ Session tokens are JWTs that contain a set of standard claims required by Clerk,
 
 To add custom claims to the session token, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**. In the **Customize session token** section, click on the **Edit** button. This will open a modal window where you can add claims and even use our handy shortcodes.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/session-options/customize-session-token.jpg"
