--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -7,7 +7,28 @@ description: Learn how to configure and work with multi-session applications
 
 One of the most powerful features that Clerk provides out of the box is multi-session applications.
 
-A multi-session application is an application that allows multiple accounts to be signed-in from the same browser at the same time. The user can switch from one account to another seamlessly. Each account is independent from the rest and has access to different resources. It's most clearly explained by the default [`<UserButton />`][user-button-ref] below.
+A multi-session application is an application that allows multiple accounts to be signed in from the same browser at the same time. The user can switch from one account to another seamlessly. Each account is independent from the rest and has access to different resources.
+
+## Enable multi-session in your application
+
+To enable multi-session in your application, you need to configure it in the Clerk Dashboard.
+
+- Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions)
+- Select your application, then select **Sessions** in the navigation sidebar.
+- Toggle on **Multi-session handling**.
+- Select **Save changes**.
+
+## Add multi-session support to your application
+
+There are two main ways to add the multi-session feature to your application:
+- [Use Clerk components](#use-clerk-components) if you want to use Clerk's pre-built UI
+- [Build a *custom flow*](#build-a-custom-flow) if you want to rebuild the existing Clerk flow using the Clerk API.
+
+### Use Clerk components
+
+The easiest way to add the multi-session feature to your application is by using Clerk's [`<UserButton />`](/docs/components/user/user-button) component.
+
+The following image demonstrates the `<UserButton />` component with two accounts signed in. The user can switch between the two accounts, add a new account, or sign out from one or all accounts.
 
 <Images
   width={440}
@@ -16,78 +37,19 @@ A multi-session application is an application that allows multiple accounts to b
   alt="The User Button component with multiple accounts signed in."
 />
 
-Note that you can switch which account is active, add additional accounts, and manage each account independently. To enable a multi-session instance, you need to handle the following scenarios:
+To learn how to use the `<UserButton />` component in your application, check out the [reference documentation](/docs/components/user/user-button).
+
+### Build a custom flow
+
+If the `UserButton />` component doesn't cover your needs, you can build a custom multi-session flow using Clerk's API.
+
+To enable a multi-session instance, you need to handle the following scenarios:
 
 - Switching between different accounts
 - Adding new accounts
 - Signing out from one account, while remaining signed in to the rest
 
-There are two main ways to handle all the above: [using Clerk Components](#using-clerk-components) or [using a custom flow](#custom-flow).
-
-<Callout type="info">
-  Looking for more information on session management? Check out the [detailed guide](/docs/authentication/configuration/session-options).
-</Callout>
-
-## Before you start
-
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out the [Set up your application](/docs/quickstarts/setup-clerk) guide.
-- You need to install the correct SDK for your application. You can find steps on how to do so through Clerk's [quickstart](/docs/quickstarts/overview) guides.
-
-## Configuration
-
-To enable the multi-session feature in your Clerk instance, go to the Clerk Dashboard and navigate to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**. Toggle on **Multi-session handling** and don't forget to select **Apply changes**.
-
-<Images
-  width={3024}
-  height={1648}
-  src="/docs/images/custom-flows/sessions.jpg"
-  alt="The Sessions page in the Clerk Dashboard. A red arrow points to the active Sessions tab. On this page, a red arrow points to the Multi-session handling toggle, which is toggled on. There is also a red arrow pointing to the 'Apply changes' button."
-/>
-
-## Using Clerk components
-
-The easiest way to add multi-session features to your application is by using the [`<UserButton />`][user-button-ref] component.
-
-This component has buttons add a new account, switch between accounts, and sign out from one or all accounts.
-
-<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
-```jsx
-import { UserButton } from "@clerk/clerk-react";
-
-const Header = () => {
-  return (
-    <header>
-      <h1>My application</h1>
-      <UserButton />
-    </header>
-  );
-};
-```
-
-```js
-<html>
-<body>
-    <header>
-        <h1>My application</h1>
-        <div id="user-button"></div>
-    </header>
-    
-    <script>
-        const el = document.getElementById("user-button");
-        // Mount the pre-built Clerk UserButton component
-        // in an HTMLElement on your page. 
-        window.Clerk.mountUserButton(el);
-    </script>
-</body>
-</html>
-```
-</CodeBlockTabs>
-
-## Custom flow
-
-In case the pre-built user button doesn't cover your needs and you prefer a custom multisession flow, you can easily make use of Clerk's SDKs.
-
-### Active session/user
+### Get the active session and user
 
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
@@ -106,7 +68,7 @@ const activeUser = window.Clerk.user;
 ```
 </CodeBlockTabs>
 
-### Switching between sessions
+### Switch between sessions
 
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
@@ -130,7 +92,7 @@ window.Clerk.setActive({ session: availableSessions[0].id });
 ```
 </CodeBlockTabs>
 
-### Adding a new session
+### Add a new session
 
 To add a new session, simply link to your existing sign-in flow. New sign-ins will automatically add to the list of available sessions on the client. To create a sign-in flow, please check one of the following popular guides:
 
@@ -179,5 +141,3 @@ await signOut();
 await window.Clerk.signOut();
 ```
 </CodeBlockTabs>
-
-[user-button-ref]: /docs/components/user/user-button
