--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -27,7 +27,7 @@ The simplest way to sign out users is via the [`<UserButton />`][user-button] co
   alt="The User Button component with the 'Sign out' option hovered over."
 />
 
-In an application with [multisession](/docs/custom-flows/multi-session-applications) enabled and with more than one account signed in, the [`<UserButton />`][user-button] component will also display a **Sign out of all accounts** option. 
+In an application with [multi-session](/docs/custom-flows/multi-session-applications) enabled and with more than one account signed in, the [`<UserButton />`][user-button] component will also display a **Sign out of all accounts** option.
 
 <Images
   width={880}
@@ -59,12 +59,12 @@ const Header = () => {
 
         <div id="user-button"></div>
     </header>
-    
+
     <script>
         const el = document.getElementById("user-button");
-        
+
         // Mount the pre-built Clerk UserButton component
-        // in an HTMLElement on your page. 
+        // in an HTMLElement on your page.
         window.Clerk.mountUserButton(el);
     </script>
 </body>
