--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -148,7 +148,7 @@ All props below are optional.
 | `userProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Manage your account** button will cause the [`<UserProfile />`][userprofile-ref] component to open as a modal, or if the browser will navigate to the `userProfileUrl` where [`<UserProfile />`][userprofile-ref] is mounted as a page.<br />Defaults to: `'modal'`. |
 | `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
 | `afterSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps). |
-| `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multisession apps). |
+| `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multi-session apps). |
 | `afterSwitchSessionUrl` | `string` | The full URL or path to navigate to after a successful account change (multi-session apps). |
 | `defaultOpen` | `boolean` | Controls whether the `<UserButton />` should open by default during the first render. |
 | `userProfileProps` | `object` | Specify options for the underlying [`<UserProfile />`][userprofile-ref] component.<br/>For example, `{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}`. |
