--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -480,7 +480,7 @@ const styles = StyleSheet.create({
 
 A token cache is important for persisting your JWT. By default, Clerk holds it in memory. However, this method shouldn't be used for Production applications.
 
-Expo provides a way to encrypt and securely store key–value pairs locally on the device via [`expo-secure-store`](https://docs.expo.dev/versions/v47.0.0/sdk/securestore/).
+Expo provides a way to encrypt and securely store key–value pairs locally on the device via [`expo-secure-store`](https://docs.expo.dev/versions/latest/sdk/securestore).
 
 You can use it as your client JWT storage by setting the `tokenCache` prop in your `<ClerkProvider>` as shown below.
 
