Add H1s to all docs where they're missing

--- a/docs/authentication/social-connections/linkedin-oidc.mdx
+++ b/docs/authentication/social-connections/linkedin-oidc.mdx
@@ -3,6 +3,8 @@ title: Set up a social connection with LinkedIn OpenID Connect
 description: Learn how to set up a social connection with LinkedIn in your Clerk application.
 ---
 
+# LinkedIn OpenID Connect
+
 <TutorialHero 
   beforeYouStart={[
     {
