--- a/docs/references/backend/invitations/get-invitation-list.mdx
+++ b/docs/references/backend/invitations/get-invitation-list.mdx
@@ -3,7 +3,7 @@ title: getInvitationList()
 description: Retrieves a list of all non-revoked invitations for your application, sorted by descending creation date.
 ---
 
-## `getInvitationList()`
+# `getInvitationList()`
 
 Retrieves a list of all non-revoked invitations for your application, sorted by descending creation date.
 
