--- a/docs/references/backend/invitations/revoke-invitation.mdx
+++ b/docs/references/backend/invitations/revoke-invitation.mdx
@@ -3,7 +3,7 @@ title: revokeInvitation()
 description: Revokes the invitation with the provided `invitationId`. Throws an error if `invitationId` is invalid.
 ---
 
-## `revokeInvitation()`
+# `revokeInvitation()`
 
 Revokes the invitation with the provided `invitationId`. Throws an error if `invitationId` is invalid.
 
