--- a/docs/integrations/databases/supabase.mdx
+++ b/docs/integrations/databases/supabase.mdx
@@ -3,6 +3,7 @@ title: Integrate Supabase with Clerk
 description: Learn how to integrate Clerk into your Supabase application.
 ---
 
+# Integrate Supabase with Clerk
 
 <TutorialHero
   beforeYouStart={[
