--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -1,11 +1,11 @@
 ---
-title: Clerk
-description: This is the main entrypoint class for the `@clerk/clerk-js` package. It contains a number of methods and properties for interacting with the Clerk API.
+title: Clerk class
+description: The Clerk class is the main entrypoint class for the `@clerk/clerk-js` package. It contains a number of methods and properties for interacting with the Clerk API.
 ---
 
-# `Clerk`
+# `Clerk` class
 
-This is the main entrypoint class for the `@clerk/clerk-js` package. It contains a number of methods and properties for interacting with the Clerk API.
+The `Clerk` class is the main entrypoint class for the `@clerk/clerk-js` package. It contains a number of methods and properties for interacting with the Clerk API.
 
 ## Properties
 
@@ -16,7 +16,7 @@ This is the main entrypoint class for the `@clerk/clerk-js` package. It contains
 | `isSatellite` | `boolean` | Clerk Flag for satellite apps |
 | `domain` | `string` | A getter for the current Clerk app's domain.<br />Prefixed with `clerk.` on production if not already prefixed.<br />Returns `""` when ran on the server |
 | `proxyUrl` | `string` | A getter for your Clerk app's proxy URL. Required for applications that run behind a reverse proxy.<br />Can be either a relative path (`/__clerk`) or a full URL (`https://<your-domain>/__clerk`). |
-| `instanceType` | `'production' \| 'development'` | A getter to see the if a Clerk instance is running in production or development mode |
+| `instanceType` | `'production' \| 'development'` | A getter to see if a Clerk instance is running in production or development mode |
 | `client` | [`Client`][client-ref] | The `Client` object for the current window. |
 | `session` | [`Session`][session-ref] \| `null` \| `undefined` | The currently active `Session`, which is guaranteed to be one of the sessions in `Client.sessions`. If there is no active session, this field will be `null`. If the session is loading, this field will be `undefined`. |
 | `user` | [`User`][user-ref] \| `null` \| `undefined` | A shortcut to `Session.user` which holds the currently active `User` object. If the session is `null` or `undefined`, the user field will match. |
