--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -1,268 +1,320 @@
 ---
-title: Organization methods
-description: Explore methods on the Clerk class that allow you to create and read information about Organizations.
+title: <CreateOrganization /> component
+description: Clerk's <CreateOrganization /> component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 ---
 
-# Organization methods
+# `<CreateOrganization />` component
 
-These methods on the [`Clerk`](/docs/references/javascript/clerk/clerk) class allow you to create and read information about [Organizations](/docs/references/javascript/organization/organization).
+<Images
+  alt="Organization Switcher Example"
+  width={992}
+  height={568}
+  src="/docs/images/ui-components/component-org_create.svg"
+/>
 
-The following examples assume:
-- you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
-- you have enabled the [Organizations feature](/docs/organizations/overview) in your Clerk Dashboard
+The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 
-## `getOrganization()`
+## Properties
 
-Retrieves information for a specific organization.
-
-```typescript
-function getOrganization(organizationId: string): Promise<Organization | undefined>;
-```
-
-### `getOrganization` parameters
+All props are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The ID of the organization to be found. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
+| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate to after creating a new organization. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used. <br />For example, `/create-org`<br />This prop is ignored in hash- and virtual-based routing. |
 
-### `getOrganization` example
+## Usage with frameworks
 
-<InjectKeys>
+The following example includes a basic implementation of the `<CreateOrganization />` component. You can use this as a starting point for your own implementation.
 
-<Tabs type="npm-script" items={['NPM module', '<script>']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
-    <CodeBlockTabs options={["main.js", "index.html"]}>
-<<<<<<< HEAD
-    ```js filename="main.js" {9}
-=======
-    ```js filename="main.js"
->>>>>>> ab8f4dbd (consolidate js createorg reference to component reference)
-    import Clerk from '@clerk/clerk-js';
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+      ```jsx filename="/app/create-organization/[[...create-organization]]/page.tsx"
+      import { CreateOrganization } from "@clerk/nextjs";
 
-    // Initialize Clerk with your Clerk publishable key
-    const clerk = new Clerk('{{pub_key}}');
-    await clerk.load();
-
-    if (clerk.user) {
-      if (clerk.organization.id) {
-        const organization = await clerk.getOrganization(clerk.organization.id);
-        console.log(organization);
-      } else {
-        console.log("User is not a member of an organization");
+      export default function CreateOrganizationPage() {
+        return <CreateOrganization />;
       }
-    } else {
-      document.getElementById("app").innerHTML = `
-        <div id="sign-in"></div>
-      `;
+      ```
 
-      const signInDiv =
-        document.getElementById("sign-in");
+      ```jsx filename="/pages/create-organization/[[...index]].tsx"
+      import { CreateOrganization } from "@clerk/nextjs";
 
-      clerk.mountSignIn(signInDiv);
-    }
-    ```
-
-    ```html filename="index.html"
-    <!doctype html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Clerk + JavaScript App</title>
-      </head>
-      <body>
-        <div id="app"></div>
-        <script type="module" src="/main.js"></script>
-      </body>
-    </html>
-    ```
+      export default function CreateOrganizationPage() {
+        return (
+            <CreateOrganization routing="path" path="/create-organization" />
+        )
+      }
+      ```
     </CodeBlockTabs>
   </Tab>
 
   <Tab>
-  ```html filename="index.html" {9}
-  <div id="sign-in"></div>
+    ```jsx filename="/create-organization.tsx"
+    import { CreateOrganization } from "@clerk/clerk-react";
+
+    export default function CreateOrganizationPage() {
+      return <CreateOrganization />;
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx filename="/route/create-organization/$.tsx"
+    import { CreateOrganization } from "@clerk/remix";
+
+    export default function CreateOrganizationPage() {
+      return <CreateOrganization />;
+    }
+    ```
+  </Tab>
+</Tabs>
+
+## Usage with JavaScript
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<CreateOrganization />` component:
+
+- [`mountCreateOrganization`](#mount-create-organization)
+- [`unmountCreateOrganization`](#unmount-create-organization)
+- [`openCreateOrganization`](#open-create-organization)
+- [`closeCreateOrganization`](#close-create-organization)
+
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
+
+### `mountCreateOrganization()`
+
+Render the `<CreateOrganization />` component to an HTML `<div>` element.
+
+```typescript
+function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
+```
+
+### `mountCreateOrganization()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<CreateOrganization />` component |
+| `props?` | [`CreateOrganizationProps`](#properties) | The properties to pass to the `<CreateOrganization />` component |
+
+#### `mountCreateOrganization()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById("app").innerHTML = `
+    <div id="create-organization"></div>
+  `;
+
+  const createOrgDiv =
+    document.getElementById("create-organization");
+
+  clerk.mountCreateOrganization(createOrgDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
 
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
 
-      if (Clerk.user) {
-        if (Clerk.organization.id) {
-          const organization = await Clerk.getOrganization(Clerk.organization.id);
-          console.log(organization);
-        } else {
-          console.log("User is not a member of an organization");
-        }
-      } else {
-        const signInDiv = document.getElementById("sign-in");
+      const createOrgDiv =
+        document.getElementById("create-organization");
 
-        Clerk.mountSignIn(signInDiv);
-      }
+      Clerk.mountCreateOrganization(createOrgDiv);
     });
   </script>
   ```
-  </Tab>
-</Tabs>
+</CodeBlockTabs>
 
 </InjectKeys>
 
-## `createOrganization()`
+### `unmountCreateOrganization()`
 
-Creates an organization programatically.
-
-<Callout type="info">
-<<<<<<< HEAD
-  You can use Clerk's [`<CreateOrganization />`](/docs/components/organization/create-organization) component if you prefer a prebuilt user interface.
-=======
-  You can use Clerk's [`<CreateOrganization />`](/docs/components/organization/create-organization.mdx) component if you prefer a prebuilt user interface.
->>>>>>> ab8f4dbd (consolidate js createorg reference to component reference)
-</Callout>
+Unmount and run cleanup on an existing `<CreateOrganization />` component instance.
 
 ```typescript
-function createOrganization({name, slug}: CreateOrganizationParams): Promise<Organization>;
+function unmountCreateOrganization(node: HTMLDivElement): void;
 ```
 
-### `createOrganization()` params
+#### `unmountCreateOrganization()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `name` | `string` | The name of the organization to be created. |
-| `slug?` | `string` | The optional slug of the organization to be created. |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<CreateOrganization />` component instance |
 
-### `createOrganization` example
+#### `unmountCreateOrganization()` usage
 
 <InjectKeys>
 
-<Tabs type="npm-script" items={['NPM module', '<script>']}>
-  <Tab>
-    <CodeBlockTabs options={["main.js", "index.html"]}>
-<<<<<<< HEAD
-    ```js filename="main.js" {11-13}
-=======
-    ```js filename="main.js"
->>>>>>> ab8f4dbd (consolidate js createorg reference to component reference)
-    import Clerk from '@clerk/clerk-js';
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
 
-    // Initialize Clerk with your Clerk publishable key
-    const clerk = new Clerk('{{pub_key}}');
-    await clerk.load();
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
 
-    if (clerk.user) {
-      const createOrgButton = document.getElementById("create-org-button");
-      createOrgButton.onclick = function () {
-        clerk
-          .createOrganization({
-            name: "test-2",
-          })
-          .then((org) => {
-            console.log(org);
-          })
-          .catch((error) => {
-            console.error(error);
-          });
-      };
-    } else {
-      document.getElementById("app").innerHTML = `
-        <div id="sign-in"></div>
-      `;
+  document.getElementById('app').innerHTML = `
+    <div id="create-organization"></div>
+  `
 
-      const signInDiv =
-        document.getElementById("sign-in");
+  const createOrgDiv =
+    document.getElementById('create-organization');
 
-      clerk.mountSignIn(signInDiv);
-    }
-    ```
+  clerk.mountCreateOrganization(createOrgDiv);
 
-    ```html filename="index.html"
-    <!doctype html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Clerk + JavaScript App</title>
-      </head>
-      <body>
-        <div id="app"></div>
-        <button id="create-org-button">Create Organization</button>
-        <script type="module" src="/main.js"></script>
-      </body>
-    </html>
-    ```
-    </CodeBlockTabs>
-  </Tab>
+  // ...
 
-  <Tab>
-<<<<<<< HEAD
-  ```html filename="index.html" {12-14}
-  <div id="sign-in"></div>
-  <div id="create-org-button"></div>
-=======
-  ```html filename="index.html"
-  <!-- Add a <div id="sign-in"> element to your HTML -->
-  <div id="sign-in"></div>
->>>>>>> ab8f4dbd (consolidate js createorg reference to component reference)
+  clerk.unmountCreateOrganization(createOrgDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
 
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
 
-      if (Clerk.user) {
-<<<<<<< HEAD
-        const createOrgButton = document.getElementById("create-org-button");
-        createOrgButton.onclick = function () {
-          clerk
-            .createOrganization({
-              name: "test-2",
-            })
-            .then((org) => {
-              console.log(org);
-            })
-            .catch((error) => {
-              console.error(error);
-            });
-        };
-=======
-        if (Clerk.organization.id) {
-          const organization = await Clerk.getOrganization(Clerk.organization.id);
-          console.log(organization);
-        } else {
-          console.log("User is not a member of an organization");
-        }
->>>>>>> ab8f4dbd (consolidate js createorg reference to component reference)
-      } else {
-        const signInDiv = document.getElementById("sign-in");
+      const createOrgDiv =
+        document.getElementById('create-organization');
 
-        Clerk.mountSignIn(signInDiv);
-      }
+      Clerk.mountCreateOrganization(createOrgDiv);
+
+      // ...
+
+      Clerk.unmountCreateOrganization(createOrgDiv);
     });
   </script>
   ```
-  </Tab>
-</Tabs>
+</CodeBlockTabs>
 
 </InjectKeys>
 
-## `getOrganizationMemberships()` (deprecated)
+### `openCreateOrganization()`
 
-<Callout type="warning">
-  `Clerk.getOrganizationMemberships()` is deprecated and will be removed in the [Core 2](https://beta.clerk.com/docs) version of Clerk. Use [`User.getOrganizationMemberships()`](/docs/references/javascript/user/user) instead.
-</Callout>
+Opens the `<CreateOrganization />` component as an overlay at the root of your HTML `body` element.
 
 ```typescript
-function getOrganizationMemberships(): Promise<OrganizationMembership[]>;
+function openCreateOrganization(props?: CreateOrganizationProps): void;
 ```
 
-Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`][orgmem-ref]s.
+#### `openCreateOrganization()` params
 
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`CreateOrganizationProps`](#properties) | The properties to pass to the `<CreateOrganization />` component |
 
-### Returns
+#### `openCreateOrganization()` usage
 
-| Type | Description |
-| --- | --- |
-| <code>Promise\<[OrganizationMembership][orgmem-ref][]\></code> | This method returns a `Promise` which resolves to the list of [`OrganizationMembership`][orgmem-ref]s for the current user. |
+<InjectKeys>
 
-[org-ref]: /docs/references/javascript/organization/organization
-[orgmem-ref]: /docs/references/javascript/organization-membership
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="create-organization"></div>
+  `
+
+  const createOrgDiv =
+    document.getElementById('create-organization');
+
+  clerk.openCreateOrganization(createOrgDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const createOrgDiv =
+        document.getElementById('create-organization');
+
+      Clerk.openCreateOrganization(createOrgDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `closeCreateOrganization()`
+
+Closes the organization profile overlay.
+
+```typescript
+function closeCreateOrganization(): void;
+```
+
+#### `closeCreateOrganization()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="create-organization"></div>
+  `
+
+  const createOrgDiv =
+    document.getElementById('create-organization');
+
+  clerk.openCreateOrganization(createOrgDiv);
+
+  // ...
+
+  clerk.closeCreateOrganization(createOrgDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const createOrgDiv =
+        document.getElementById('create-organization');
+
+      Clerk.openCreateOrganization(createOrgDiv);
+
+      // ...
+
+      Clerk.closeCreateOrganization(createOrgDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+## Customization
+
+To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
