fix code example

--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -32,7 +32,7 @@ function getOrganization(organizationId: string): Promise<Organization | undefin
 <Tabs type="npm-script" items={['NPM module', '<script>']}>
   <Tab>
     <CodeBlockTabs options={["main.js", "index.html"]}>
-    ```js filename="main.js"
+    ```js filename="main.js" {9}
     import Clerk from '@clerk/clerk-js';
 
     // Initialize Clerk with your Clerk publishable key
@@ -77,8 +77,7 @@ function getOrganization(organizationId: string): Promise<Organization | undefin
   </Tab>
 
   <Tab>
-  ```html filename="index.html"
-  <!-- Add a <div id="sign-in"> element to your HTML -->
+  ```html filename="index.html" {10}
   <div id="sign-in"></div>
 
   <script>
@@ -131,7 +130,7 @@ function createOrganization({name, slug}: CreateOrganizationParams): Promise<Org
 <Tabs type="npm-script" items={['NPM module', '<script>']}>
   <Tab>
     <CodeBlockTabs options={["main.js", "index.html"]}>
-    ```js filename="main.js"
+    ```js filename="main.js" {11-13}
     import Clerk from '@clerk/clerk-js';
 
     // Initialize Clerk with your Clerk publishable key
@@ -184,21 +183,28 @@ function createOrganization({name, slug}: CreateOrganizationParams): Promise<Org
   </Tab>
 
   <Tab>
-  ```html filename="index.html"
-  <!-- Add a <div id="sign-in"> element to your HTML -->
+  ```html filename="index.html" {12-14}
   <div id="sign-in"></div>
+  <div id="create-org-button"></div>
 
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
 
       if (Clerk.user) {
-        if (Clerk.organization.id) {
-          const organization = await Clerk.getOrganization(Clerk.organization.id);
-          console.log(organization);
-        } else {
-          console.log("User is not a member of an organization");
-        }
+        const createOrgButton = document.getElementById("create-org-button");
+        createOrgButton.onclick = function () {
+          clerk
+            .createOrganization({
+              name: "test-2",
+            })
+            .then((org) => {
+              console.log(org);
+            })
+            .catch((error) => {
+              console.error(error);
+            });
+        };
       } else {
         const signInDiv = document.getElementById("sign-in");
 
