fix broken links

--- a/docs/references/javascript/clerk/build-urls.mdx
+++ b/docs/references/javascript/clerk/build-urls.mdx
@@ -108,13 +108,13 @@ Returns the url that you've configured in your app's Clerk dashboard.
 function buildCreateOrganizationUrl(): string;
 ```
 
-Returns the configured url where <code><a href="/docs/references/javascript/clerk/create-organization">CreateOrganization</a></code> is mounted or a custom create-organization page is rendered.
+Returns the configured url where [`CreateOrganization`](/docs/components/organization/create-organization) is mounted or a custom create-organization page is rendered.
 
 ### Returns
 
 | Type | Description |
 | --- | --- |
-| `string` | The configured url where [`CreateOrganization`](/docs/references/javascript/clerk/create-organization) is mounted or a custom create-organization page is rendered. |
+| `string` | The configured url where [`CreateOrganization`](/docs/components/organization/create-organization) is mounted or a custom create-organization page is rendered. |
 
 ## `buildOrganizationProfileUrl()`
 
