--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -109,7 +109,7 @@ function getOrganization(organizationId: string): Promise<Organization | undefin
 Creates an organization programatically.
 
 <Callout type="info">
-  You can use Clerk's [`<CreateOrganization />`](/docs/components/organization/create-organization.mdx) component if you prefer a prebuilt user interface.
+  You can use Clerk's [`<CreateOrganization />`](/docs/components/organization/create-organization) component if you prefer a prebuilt user interface.
 </Callout>
 
 ```typescript
