docs-5495 Consolidate JS userbutton userprofile references --> component references (#769)

--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -173,6 +173,18 @@ The `Clerk` class also contains a number of methods for interacting with Clerk's
 - [`openSignUp()`](/docs/components/authentication/sign-up#open-sign-up)
 - [`closeSignUp()`](/docs/components/authentication/sign-up#close-sign-up)
 
+### `<UserButton />`
+
+- [`mountUserButton()`](/docs/components/user/user-button#mount-user-button)
+- [`unmountUserButton()`](/docs/components/user/user-button#unmount-user-button)
+
+### `<UserProfile />`
+
+- [`mountUserProfile()`](/docs/components/user/user-profile#mount-user-profile)
+- [`unmountUserProfile()`](/docs/components/user/user-profile#unmount-user-profile)
+- [`openUserProfile()`](/docs/components/user/user-profile#open-user-profile)
+- [`closeUserProfile()`](/docs/components/user/user-profile#close-user-profile)
+
 ## Additional methods
 
 In addition to the methods listed above, the `Clerk` class also has the following methods:
