DOCS-5836 remove unnecessary screenshot from multi-session custom flow guide (#778)

--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -9,7 +9,7 @@ description: The `<UserButton />` component is used to render the familiar user 
 
 The `<UserButton />` component is used to render the familiar user button UI popularized by Google.
 
-Clerk is the only provider with multi-session support, allowing users to sign into multiple accounts at once and switch between them. For multisession apps, the `<UserButton />` automatically supports instant account switching, without the need of a full page reload. For more information, you can check out the [Multi-session applications guide](/docs/custom-flows/multi-session-applications#overview).
+Clerk is the only provider with multi-session support, allowing users to sign into multiple accounts at once and switch between them. For multi-session apps, the `<UserButton />` automatically supports instant account switching, without the need of a full page reload. For more information, you can check out the [Multi-session applications guide](/docs/custom-flows/multi-session-applications#overview).
 
 ## Properties
 
@@ -23,7 +23,7 @@ All props are optional.
 | `userProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Manage your account** button will cause the [`<UserProfile />`](/docs/components/user/user-profile) component to open as a modal, or if the browser will navigate to the `userProfileUrl` where `<UserProfile />` is mounted as a page.<br />Defaults to: `'modal'`. |
 | `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
 | `afterSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps). |
-| `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multisession apps). |
+| `afterMultiSessionSingleSignOutUrl` | `string` | The full URL or path to navigate to after a signing out from currently active account (multi-session apps). |
 | `afterSwitchSessionUrl` | `string` | The full URL or path to navigate to after a successful account change (multi-session apps). |
 | `defaultOpen` | `boolean` | Controls whether the `<UserButton />` should open by default during the first render. |
 | `userProfileProps` | `object` | Specify options for the underlying [`<UserProfile />`](/docs/components/user/user-profile) component.<br/>For example: `{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}`. |
