update filename for route handler code example

--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -39,7 +39,7 @@ const user = await clerkClient.users.updateUser(userId, params);
 <Tabs type="framework" items={["Next.js", "Node", "Remix"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-    ```tsx filename="app/page.tsx"
+    ```tsx filename="app/api/test/route.ts"
     import { NextRequest, NextResponse } from 'next/server';
     import { getAuth, clerkClient } from '@clerk/nextjs/server';
 
