clearly link to the reference documentation

--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -21,6 +21,8 @@ The `useUser()` hook is a convenient way to access the current [`User`](/docs/re
 
 The following example demonstrates how to use the `useUser()` hook to access the `user` object, which includes the current user's data, like the user's full name. The `isLoaded` and `isSignedIn` properties are used to handle the loading state and to check if the user is signed in, respectively.
 
+For more information on the `User` object, see the [`reference`](/docs/references/javascript/user/user).
+
 ```tsx filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
 
@@ -43,6 +45,8 @@ export default function Home() {
 ### Update the current user data with the `useUser()` hook
 
 The following example demonstrates how to use the `useUser()` hook to access the `user` object, which includes the `update` method for updating the user's data.
+
+For more information on the `update()` method, see the [`User`](/docs/references/javascript/user/user) reference.
 
 ```tsx filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
@@ -77,6 +81,8 @@ export default function Home() {
 ### Reload user data with the `useUser()` hook
 
 To retrieve the latest user data after updating the user elsewhere, use the `user.reload()` method.
+
+For more information on the `reload()` method, see the [`User`](/docs/references/javascript/user/user) reference.
 
 ```tsx filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
