--- a/docs/references/backend/user/update-user-metadata.mdx
+++ b/docs/references/backend/user/update-user-metadata.mdx
@@ -1,69 +1,78 @@
 ---
-title: updateUserMetadata() | User Object
-description: Updates the metadata for a user, by adding or updating entries in the user's metadata. 
+title: updateUserMetadata()
+description: Use Clerk's Backend SDK to update the metadata associated with the specified user.
 ---
 
 # `updateUserMetadata()`
 
-Updates the metadata for a user, by adding or updating entries in the user's metadata. 
-
-The provided ID must be valid, otherwise an error will be thrown.
-
-<Callout type="info">
-  The function merges the provided metadata with the existing metadata. It does not delete any existing metadata unless the provided metadata explicitly overwrites a key with a new value.
-</Callout>
+Updates the metadata associated with the specified user.
 
 ```tsx
-const userId = 'my-user-id';
-
-const params = {
-  publicMetadata: {
-    hobby: 'coding',
-    favoriteColor: 'blue'
-  }
-};
-
-const user = await clerkClient.users.updateUserMetadata(userId, params);
+function updateUserMetadata: (userId: string, params: UpdateUserMetadataParams) => Promise<User>;
 ```
 
 ## `UpdateUserMetadataParams`
 
-| Name | Type | Description |
+| Name | Type	| Description |
 | --- | --- | --- |
-| `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that is visible to both your Frontend and Backend APIs. |
-| `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
-| `unsafeMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
+| `userId` | `string` | The ID of the organization to update. |
+| `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
+| `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
 
-## Examples
+## `updateUserMetadata()` example
 
-<Tabs type="framework" items={["Node"]}>
-  <Tab>
-  ```js filename="updateUserMetadata.js"
-  import clerkClient from '@clerk/clerk-sdk-node';
+In this example, you can see that the returned [`User`](/docs/references/backend/types/backend-user) object has its `publicMetadata` property updated with the new metadata provided. 
 
-  app.post('/api/update-user-metadata',
-    // ClerkExpressRequireAuth returns an error for unauthorized requests
-    ClerkExpressRequireAuth(),
-    // Optionally ClerkExpressWithAuth returns an empty user with no error
-    // ClerkExpressWithAuth(),
-    async (req, res) => {
+```tsx {4-6, 30}
+const userId = 'user_2bxfCJOe0Ocd8DNe9hFN3EXvfOu';
 
-      // Get the user ID from req.auth
-      const userId = req.auth.userId
+const response = await clerkClient.users.updateUserMetadata(userId, {
+  publicMetadata:{
+    "example": "metadata"
+  }
+});
 
-      // The user metadata to update
-      const params = {
-        publicMetadata: {
-          hobby: 'coding',
-          favoriteColor: 'blue'
-        }
-      };
+console.log(response);
+/*
+_User {
+  id: 'user_2cSSCzV7948rhPJMsY601tXsEU4',
+  passwordEnabled: true,
+  totpEnabled: false,
+  backupCodeEnabled: false,
+  twoFactorEnabled: false,
+  banned: false,
+  createdAt: 1708103362688,
+  updatedAt: 1708103702285,
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJjU1NDelY3OTQ4cmhQSk1zWTYwMXRYc0VVNCIsImluaXRpYWxzIjoiVFUifQ',
+  hasImage: false,
+  primaryEmailAddressId: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
+  primaryPhoneNumberId: null,
+  primaryWeb3WalletId: null,
+  lastSignInAt: null,
+  externalId: null,
+  username: null,
+  firstName: 'Test',
+  lastName: 'User',
+  publicMetadata: { example: 'metadata' },
+  privateMetadata: {},
+  unsafeMetadata: {},
+  emailAddresses: [
+    _EmailAddress {
+      id: 'idn_2cSSCuFhU35F5u5Labwtmj7xU6B',
+      emailAddress: 'testclerk123@gmail.com',
+      verification: [_Verification],
+      linkedTo: []
+    }
+  ],
+  phoneNumbers: [],
+  web3Wallets: [],
+  externalAccounts: [],
+  lastActiveAt: null,
+  createOrganizationEnabled: true
+}
+*/
+```
 
-      const updatedUser = await clerkClient.users.updateUserMetadata(userId, params)
+## Backend API (BAPI) endpoint
 
-      res.json({ updatedUser })
-    })
-  ```
-  </Tab>
-
-</Tabs>
+This method in the SDK is a wrapper around the BAPI endpoint `PATCH/users/{user_id}/metadata`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/UpdateUserMetadata) for more details.
