Replace "Log In" with "Sign In" where appropriate
This PR removes the use of the word "log" or "logged" when referring to signing into Clerk or a Clerk app. This keeps the language consistent with our

--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -111,7 +111,7 @@ Now that everything is set up, you need to activate the SAML Connection via the 
 
 ## Authenticate with SAML
 
-Everything should be set up now for you to try out authentication via SAML. Go to your application’s Sign In page and add your email in the input field. If it matches an active SAML Connection, you will be redirected to your IdP where you will log in with your credentials.
+Everything should be set up now for you to try out authentication via SAML. Go to your application’s Sign In page and add your email in the input field. If it matches an active SAML Connection, you will be redirected to your IdP where you will sign in with your credentials.
 
 ## Glossary
 
