--- a/docs/custom-flows/forgot-password.mdx
+++ b/docs/custom-flows/forgot-password.mdx
@@ -81,7 +81,7 @@ const ForgotPasswordPage: NextPage = () => {
           setError('');
         } else if (result.status === 'complete') {
           // Set the active session to 
-          // the newly created session (user is now logged in)
+          // the newly created session (user is now signed in)
           setActive({ session: result.createdSessionId });
           setError('');
         } else {
