--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -5,7 +5,7 @@ description: Learn how to authenticate or verify users with magic links.
 
 # Magic links
 
-Clerk supports passwordless authentication with magic links, which lets users sign in and sign up without having to remember a password. During login or registration, users will be asked to enter their email address. They will receive an email message with a link that can be clicked in order to complete the authentication process.
+Clerk supports passwordless authentication with magic links, which lets users sign in and sign up without having to remember a password. During sign in or sign up, users will be asked to enter their email address. They will receive an email message with a link that can be clicked in order to complete the authentication process.
 
 This one-click, link-based verification method is often referred to as a "magic link". The process is similar to sending a one-time code to your users but skipping the part where they have to come back to your app and enter the code. This is where the "magic" kicks in.
 
@@ -28,7 +28,7 @@ Magic links can be used to easily authenticate users or verify their email addre
 3. Clerk sends an email to the user, containing a link to the verification URL.
 4. The user clicks the magic link. This can happen on the same device where they entered their email address, or on a different device.
 5. Clerk will verify the user's identity and advance any sign-in or sign-up attempt that might be in progress. In case the verification fails, Clerk will inform the user.
-6. Your user will now be logged in on the device or tab that they opened the link.
+6. Your user will now be signed in on the device or tab that they opened the link.
 
 Magic links work on any device. There's no constraint on where the link will be opened. For example, a user might try to sign in from their desktop browser, but open the link from their mobile phone.
 
@@ -477,7 +477,7 @@ cancelMagicLinkFlow();
 
 #### Sign in using a custom flow (Clerk API)
 
-Signing users into your application is probably the most popular use case for magic links. Users enter their email address and then click on a link that's delivered to them via email message in order to log in.
+Signing users into your application is probably the most popular use case for magic links. Users enter their email address and then click on a link that's delivered to them via email message in order to sign in.
 
 The sign-in process can be completed on the same or a different device. For example, users might enter their email address in their desktop browser, but click the sign-in magic link from their mobile phone. The user's email address will still be verified and authentication will proceed.
 
