--- a/docs/deployments/deploy-to-vercel.mdx
+++ b/docs/deployments/deploy-to-vercel.mdx
@@ -73,7 +73,7 @@ If you're using your Clerk development key for this Vercel preview deployment, e
 
 However, if you wish to use your production Clerk keys with a preview Vercel deployment, you'll need to utilize [Vercel's preview deploment suffix customization](https://vercel.com/docs/concepts/deployments/generated-urls#preview-deployment-suffix) to host preview URLs under your primary domain's subdomain.
 
-This is done to ensure your users' security by restricting production redirects to fall under your production domain. This prevents bad actors from maliciously requesting login access to their own domains.
+This is done to ensure your users' security by restricting production redirects to fall under your production domain. This prevents bad actors from maliciously requesting sign in access to their own domains.
 
 > We take security very seriously at Clerk. To learn more about how Clerk ensures your user's security, [please refer to our docs on the subject.](/docs/security/overview)
 
