--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -284,7 +284,7 @@ When you migrate user data from Auth.js to Clerk, Clerk generates new user IDs f
     const { userId } = getAuth(ctx.req);
 
     if (!userId) {
-      // handle user is not logged in.
+      // handle user is not signed in.
     }
 
     const { sessionClaims: { userId } } = getAuth(req)
