--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -96,7 +96,7 @@ export default function AdminDashboard() {
 }
 ```
 
-The `/admin/dashboard` route now requires that the user is logged into the application. It also requires that the user have a `publicMetadata` of `{"role": "admin" }`.
+The `/admin/dashboard` route now requires that the user is signed into the application. It also requires that the user have a `publicMetadata` of `{"role": "admin" }`.
 
 ## Create a reusable function to check roles
 
