--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -172,11 +172,11 @@ Access your app to verify that authentication is enabled:
   </CodeBlockTabs>
 2. Visit [`http://localhost:3000`](http://localhost:3000) to access your app. The Middleware will redirect you to your Sign Up page, provided by Clerk's [Account Portal](/docs/account-portal/overview) feature.
 3. Sign up to gain access to your application.
-4. Log into your new account. You should be able to access it now.
+4. Sign into your new account. You should be able to access it now.
 
 ### Embed the `<UserButton />`
 
-[`<UserButton />`](/docs/components/user/user-button) is a [prebuilt component](/docs/components/overview) that allows users to log in, log out, and manage their account information.
+[`<UserButton />`](/docs/components/user/user-button) is a [prebuilt component](/docs/components/overview) that allows users to sign in, log out, and manage their account information.
 
 Use the following code to add a `<UserButton />` to your app:
 
