--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -160,7 +160,7 @@ export default ClerkApp(App);
 Clerk uses short lived tokens to keep your application secure. To refresh expired tokens, Clerk uses Remix's error boundary.
 
 <Callout type="info">
-  If you are seeing a 401 after a short period of time, even though your user is logged in, please verify you have implemented this section.
+  If you are seeing a 401 after a short period of time, even though your user is signed in, please verify you have implemented this section.
 </Callout>
 
 ```tsx filename="app/root.tsx"
