--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -21,9 +21,9 @@ description: Set up a new Clerk account and integrate it into a new application.
 
 <Steps>
 
-### Log into Clerk
+### Sign into Clerk
 
-[Create a Clerk account](https://dashboard.clerk.com/sign-up) or [log into your Clerk dasbhoard](https://dashboard.clerk.com/).
+[Create a Clerk account](https://dashboard.clerk.com/sign-up) or [sign into your Clerk dasbhoard](https://dashboard.clerk.com/).
 
 ### Create a Clerk application
 
