--- a/docs/references/nextjs/build-clerk-props.mdx
+++ b/docs/references/nextjs/build-clerk-props.mdx
@@ -19,7 +19,7 @@ export const getServerSideProps: GetServerSideProps = async (ctx) => {
   const { userId } = getAuth(ctx.req);
 
   if (!userId) {
-    // handle user is not logged in.
+    // handle user is not signed in.
   }
 
   // Load any data your application needs for the page using the userId
