--- a/docs/references/nextjs/current-user.mdx
+++ b/docs/references/nextjs/current-user.mdx
@@ -13,7 +13,7 @@ import { currentUser } from '@clerk/nextjs';
 export default async function Page() {
   const user = await currentUser();
 
-  if (!user) return <div>Not logged in</div>;
+  if (!user) return <div>Not signed in</div>;
 
   return <div>Hello {user?.firstName}</div>;
 }
