--- a/docs/references/nextjs/read-session-data.mdx
+++ b/docs/references/nextjs/read-session-data.mdx
@@ -32,11 +32,11 @@ The `currentUser()` helper will return the [`Backend API User`](https://clerk.co
 
     export default async function Page() {
 
-      // Get the userId from auth() -- if null, the user is not logged in
+      // Get the userId from auth() -- if null, the user is not signed in
       const { userId } = auth();
 
       if (userId) {
-        // Query DB for user specific information or display assets only to logged in users 
+        // Query DB for user specific information or display assets only to signed in users 
       }
 
       // Get the Backend API User object when you need access to the user's information
@@ -54,7 +54,7 @@ The `currentUser()` helper will return the [`Backend API User`](https://clerk.co
 
     export async function GET() {
 
-      // Get the userId from auth() -- if null, the user is not logged in
+      // Get the userId from auth() -- if null, the user is not signed in
       const { userId } = auth();
 
       if (!userId) {
@@ -78,7 +78,7 @@ The `currentUser()` helper will return the [`Backend API User`](https://clerk.co
 
     export async function GET() {
 
-      // Get the userId from auth() -- if null, the user is not logged in
+      // Get the userId from auth() -- if null, the user is not signed in
       const { userId } = auth();
 
       if (!userId) {
@@ -167,7 +167,7 @@ The `currentUser()` helper will return the [`Backend API User`](https://clerk.co
       const { userId } = getAuth(ctx.req);
 
       if (!userId) {
-        // handle user is not logged in.
+        // handle user is not signed in.
       }
 
       // Load any data your application needs for the page using the userId
