--- a/docs/references/react/add-react-router.mdx
+++ b/docs/references/react/add-react-router.mdx
@@ -286,7 +286,7 @@ Visit [`http://localhost:5173`](http://localhost:5173) and explore your app's pa
 
 - The top most object in the `router` is the `<RootLayout />` component, and everything else is a child. Any child route will be mounted where the `<Outlet />` component is inside the root layout. This wraps the entire application with `<ClerkProvider>` and allows you to add a header, footer, sidebars and other pieces that will be available to the entire application.
 - Several routes are direct children of the root layout. These are all public routes. You can use control components like `<SignedIn>` or check the `userId` from `useAuth()` if you want to make content protected.
-- The `<DashboardLayout />` is child of the root layout, renders nothing, and has a check to see if the `userId` exists. This will confirm that a user is logged in. If the `userId` is not truthy, then the user will be redirected to the `/sign-in` route to sign-in. That protects all pages in the `/dashboard` route. All children of `/dashboard` will be mounted inside of the `<Outlet />` component in the dashboard layout.
+- The `<DashboardLayout />` is child of the root layout, renders nothing, and has a check to see if the `userId` exists. This will confirm that a user is signed in. If the `userId` is not truthy, then the user will be redirected to the `/sign-in` route to sign-in. That protects all pages in the `/dashboard` route. All children of `/dashboard` will be mounted inside of the `<Outlet />` component in the dashboard layout.
 
 </Steps>
 
