--- a/docs/references/remix/clerk-error-boundary.mdx
+++ b/docs/references/remix/clerk-error-boundary.mdx
@@ -7,7 +7,7 @@ description: Clerk uses short-lived tokens to keep your application secure. To r
 
 Clerk uses short-lived tokens to keep your application secure. To refresh expired tokens Clerk [uses Remix's error boundary feature](https://remix.run/docs/en/main/route/error-boundary).
 
-> If you do not implement this into your app, you will see a 401 after a short period of time even though your user is logged in.
+> If you do not implement this into your app, you will see a 401 after a short period of time even though your user is signed in.
 
 ## Usage
 
