--- a/docs/troubleshooting/create-a-minimal-reproduction.mdx
+++ b/docs/troubleshooting/create-a-minimal-reproduction.mdx
@@ -61,7 +61,7 @@ Adjust your template project by adding code gradually until you get to the point
 
 ### Add a README file (optional)
 
-Add a README file to the root of the repository that contains the steps that must be taken in the app in order to produce the error (click X button, log in using Y provider, etc).
+Add a README file to the root of the repository that contains the steps that must be taken in the app in order to produce the error (click X button, sign in using Y provider, etc).
 
 <Callout type="warning">
   This step is only required if you are submitting the minimal reproduction to the Clerk support team.
