--- a/docs/custom-flows/use-sign-up.mdx
+++ b/docs/custom-flows/use-sign-up.mdx
@@ -202,7 +202,7 @@ export default function SignInForm() {
         router.push("/")
       }
       else {
-        /*Investigate why the login hasn't completed */
+        /*Investigate why the sign in hasn't completed */
         console.log(result);
       }
 
