--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -227,7 +227,7 @@ export default function OrganizationLayout(props: PropsWithChildren) {
 
 Now that you have hidden Personal Accounts from the UI and can detect and set an active organization, you can limit access to your application to users with active organizations only. This will ensure that users without active organizations cannot access your application.
 
-It's possible for a user to be logged in, but not have an active organization. This can happen in two cases:
+It's possible for a user to be signed in, but not have an active organization. This can happen in two cases:
   - The user created an account and hasn't created an organization yet
   - The user joined or created multiple organizations, and left or deleted the active organization
 
@@ -249,7 +249,7 @@ To limit access to the entire application, your middleware can be configured as 
   export default authMiddleware({
     afterAuth(auth, req, evt) {
       ...
-      // Redirect logged in users to organization selection page if they are not active in an organization
+      // Redirect signed in users to organization selection page if they are not active in an organization
       if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
         const searchParams = new URLSearchParams({
           redirectUrl: req.url
@@ -272,7 +272,7 @@ To limit access to a specific part of the application, you can check if the path
   export default authMiddleware({
     afterAuth(auth, req, evt) {
       ...
-      // Redirect logged in users to organization selection page if they are not active in an organization
+      // Redirect signed in users to organization selection page if they are not active in an organization
       if(
         auth.userId &&
         !auth.orgId &&
