--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -79,7 +79,7 @@ export default authMiddleware({
     if (!auth.userId && !auth.isPublicRoute) {
       return redirectToSignIn({ returnBackUrl: req.url });
     }
-    // Redirect logged in users to organization selection page if they are not active in an organization
+    // Redirect signed in users to organization selection page if they are not active in an organization
     if (
       auth.userId &&
       !auth.orgId &&
@@ -88,7 +88,7 @@ export default authMiddleware({
       const orgSelection = new URL("/org-selection", req.url);
       return NextResponse.redirect(orgSelection);
     }
-    // If the user is logged in and trying to access a protected route, allow them to access route
+    // If the user is signed in and trying to access a protected route, allow them to access route
     if (auth.userId && !auth.isPublicRoute) {
       return NextResponse.next();
     }
@@ -104,7 +104,7 @@ When using `afterAuth`, the checks must handle all cases — a custom `afterAuth
 
 Looking at the example immediately above, the following is happening:
 
-1. Redirect all users who are not logged in but who are visiting a protected page to the sign-in route.
+1. Redirect all users who are not signed in but who are visiting a protected page to the sign-in route.
 
 ```ts
 if (!auth.userId && !auth.isPublicRoute) {
@@ -129,7 +129,7 @@ if (auth.userId && !auth.isPublicRoute) {
 }
 ```
 
-4. If none of the above match, then the user is visiting a public route. Allow them to. Don't check if they are logged in -- it doesn't matter.
+4. If none of the above match, then the user is visiting a public route. Allow them to. Don't check if they are signed in -- it doesn't matter.
 
 ```ts
 return NextResponse.next();
@@ -247,7 +247,7 @@ The `authMiddleware()` method accepts an optional object. The following options 
 | Name                               | Type                 | Description                                                                                                                                                                                                                                                                                                                                     |
 | ---------------------------------- | -------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `afterAuth?`                       | `function`           | Called after the authentication middleware is executed. This function has access to the [`Auth`](/docs/references/nextjs/auth-object) object and can be used to execute logic based on the auth state.                                                                                                                      |
-| `apiRoutes?`                       | `string[]`           | A list of routes that should return 401 if the user is not logged in. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or `[/^\/foo\/.*$/]`                                                                                                            |
+| `apiRoutes?`                       | `string[]`           | A list of routes that should return 401 if the user is not signed in. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or `[/^\/foo\/.*$/]`                                                                                                            |
 | `audience?`                        | `string \| string[]` | A string or list of audiences.                                                                                                                                                                                                                                                                                                                  |
 | `audience?`                        | `string \| string[]` | A string or list of [audiences](https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.3). If passed, it is checked against the `aud` claim in the token.                                                                                                                                                                                    |
 | `authorizedParties?`               | `string[]`           | An allowlist of origins to verify against, to protect your application from the subdomain cookie leaking attack.<br/>For example:<br/>`['http://localhost:3000', 'https://example.com']`<br/>For more information, refer to the [reference guide](/docs/references/nodejs/token-verification#validate-the-authorized-party-of-a-session-token). |
