--- a/docs/references/nextjs/route-handlers.mdx
+++ b/docs/references/nextjs/route-handlers.mdx
@@ -8,7 +8,7 @@ Clerk provides helpers to allow you to protect your Route Handlers, fetch the cu
 
 ## Protecting Route Handlers
 
-If you aren't protecting your Route Handler using Clerk's middleware, you can check if the user is logged in.
+If you aren't protecting your Route Handler using Clerk's middleware, you can check if the user is signed in.
 
 ```ts filename="app/api/route.ts"
 import { NextResponse } from 'next/server';
