add section about oauth access token

--- a/docs/references/backend/user/get-user-oauth-access-token.mdx
+++ b/docs/references/backend/user/get-user-oauth-access-token.mdx
@@ -8,19 +8,17 @@ description: Use Clerk's Backend SDK to retrieve the corresponding OAuth access 
 Retrieve the corresponding OAuth access token for a user that has previously authenticated with a particular OAuth provider.
 
 ```tsx
-function getUserOauthAccessToken: (userId: string, provider: `oauth_${OAuthProvider}`) => Promise<PaginatedResourceResponse<OauthAccessToken[]>>;
+function getUserOauthAccessToken: (userId: string, provider: `oauth_${OAuthProvider}`) => Promise<OauthAccessToken[]>;
 ```
 
-## `getUserOauthAccessToken()` parameters
+## Parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The ID of the user to retrieve. |
 | `provider` | <code>oauth_$\{[OAuthProvider](/docs/references/javascript/types/oauth-provider)\}</code> | The OAuth provider to retrieve the access token for. |
 
-## `getUserOauthAccessToken()` example
-
-In this example, you can see that the returned [`PaginatedResourceResponse`](/docs/references/backend/types/paginated-resource-response) includes `data`, which is an array of `OauthAccessToken` objects, and `totalCount`, which indicates the total number of access tokens for the specified user.
+## Example
 
 ```tsx
 const userId = 'user_2bxfCJOe0Ocd8DNe9hFN3EXvfOu';
@@ -30,26 +28,23 @@ const provider = 'oauth_google';
 const response = await clerkClient.users.getUserOauthAccessToken(userId, provider);
 
 console.log(response);
-/* In this example, you can see that data is an array of OauthAccessToken objects, and is populated with one OauthAccessToken.
-{
-  data: [
-    _OauthAccessToken {
-      provider: 'oauth_google',
-      token: 'ya29...',
-      publicMetadata: {},
-      label: null,
-      scopes: [
-        'email',
-        'https://www.googleapis.com/auth/userinfo.email',
-        'https://www.googleapis.com/auth/userinfo.profile',
-        'openid',
-        'profile'
-      ],
-      tokenSecret: undefined
-    }
-  ],
-  totalCount: 1
-}
+/*
+[
+  _OauthAccessToken {
+    provider: 'oauth_google',
+    token: 'ya29...',
+    publicMetadata: {},
+    label: null,
+    scopes: [
+      'email',
+      'https://www.googleapis.com/auth/userinfo.email',
+      'https://www.googleapis.com/auth/userinfo.profile',
+      'openid',
+      'profile'
+    ],
+    tokenSecret: undefined
+  }
+]
 */
 ```
 
